Bug fixed: Links collapsing on being clicked

--- a/src/components/gamedetails/GameDetails.css
+++ b/src/components/gamedetails/GameDetails.css
@@ -48,10 +48,9 @@
   width: 200px;
 }
 
-#title-link,
-:link,
-:visited,
-:active {
+#title-link:link,
+#title-link:visited,
+#title-link:active {
   color: rgb(210, 210, 210);
   display: inline-block;
   text-decoration: none;
